-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.2
-
None
-
-
884a568d7 (17.0)
Hey.
To facilitate backups I keep my builds outside the projects directory.
The 'Default build directory' settings has the value of
wherever_one_wants/builds/%{Project:Name}/%{Kit:FileSystemName}-%{BuildConfig:Name}
I go into Qt examples, grab the windowsflags example and put it into my projects directory.
I rename the windowsflags folder into testwindowsflags.
qmake based projects work just fine. I open it in Qt Creator, configure it and builds go to
wherever_one_wants/builds/windowflags/Desktop_Qt_6_8_3_MSVC2022_64bit-Debug
just as expected.
But when I open CMakeLists.txt Qt Creator suggests in the 'Configure Project' pane that the project name is testwindowsflags after its folder name despite what the project file says.
# CMakeLists.txt project(windowflags LANGUAGES CXX) # builds go to wherever_one_wants/builds/testwindowflags/Desktop_Qt_6_8_3_MSVC2022_64bit-Debug
Even the editor shows the name wrong for a short time while the project is loading. It only changes later when the configuration is parsed and all set.
For Gerrit Dashboard: QTCREATORBUG-32996 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
645773,4 | CMakePM: Parse the CMakeLists.txt file to find out the project's name | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |